[BlinkGenPropertyTrees] Expand all clips between inner and outer viewports

The root scroller is also known as the outer viewport and is not always the
root frame's LayoutView. If the root scroller is a child of the root frame,
the clips between the child and the root frame should not apply to the root
scroller. Previously, this was implemented by disabling clipping on the
ancestor GraphicsLayers of the root scroller. This patch changes the behavior to
adjust all ancestor clips in LayerTreeHostImpl::UpdateViewportContainerSizes.
This should be safe because of the restrictions on what can be a root scroller.

Bug: 879610
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I1974ae6b2a2f130cc2ce4a4d90e3dea1c9d64340
Reviewed-on: https://chromium-review.googlesource.com/1217509
Commit-Queue: Philip Rogers <pdr@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590495}
Former-commit-id: c3ddb307e451789dec98f8f6188cfc1f94031a1f